[package]
name = "vyper-rs"
version = "1.0.0"
edition = "2021"
authors = ["Crypdoughdoteth"]
license = "MIT"
keywords = ["Crypto", "Vyper", "EVM", "Compilers"]
description = "A Rust library to interact with the Vyper compiler!"
repository = "https://github.com/crypdoughdoteth/vyper-rs/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
hex = "0.4.3"
itertools = "0.11.0"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = ["rt"] }
tokio-test = "0.4.2"
