[workspace]

members = [
    "examples/contracts",
]

[package]
name = "vyper-rs"
version = "2.0.0"
edition = "2021"
authors = ["Crypdoughdoteth"]
license = "MIT"
keywords = ["Crypto", "Vyper", "EVM", "Compilers"]
description = "A Rust library to interact with the Vyper compiler!"
repository = "https://github.com/crypdoughdoteth/vyper-rs/"
exclude = [
    "examples/contracts"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serde = {version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
[dev-dependencies]
tokio-test = "0.4.2"

