[package]
name = "contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vyper-rs = {path =  "../../../vyper-rs"}
ethers = {version = "2.0.8", features = ["rustls"]}
anyhow = "1.0.72"
tokio = { version = "1.29.1", features = ["full"] }
tokio-test = "0.4.2"
serde_json = "1.0.104"